Marka ismi Canlı Döviz Kuru olarak güncellendi

--- a/pages/hakkimizda.html
+++ b/pages/hakkimizda.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Finans Platformu - Canlı döviz kurları, anlık kripto para fiyatları, dolar kaç tl, bitcoin kaç tl, güncel döviz çevirici ve kripto para çevirici araçları.">
-    <meta name="keywords" content="canlı döviz kuru, anlık döviz kuru, dolar kaç tl, euro kaç tl, bitcoin kaç tl, kripto para piyasa, döviz çevirici, kripto çevirici">
-    <title>Hakkımızda - Finans Platformu | Canlı Döviz ve Kripto Para Bilgileri</title>
+    <meta name="description" content="Canlı Döviz Kuru - Anlık döviz kurları, dolar kaç tl, euro kaç tl, güncel döviz çevirici ve kripto para bilgileri.">
+    <meta name="keywords" content="canlı döviz kuru, anlık döviz kuru, dolar kaç tl, euro kaç tl, bitcoin kaç tl, kripto para piyasa">
+    <title>Hakkımızda - Canlı Döviz Kuru | Anlık Döviz ve Kripto Para Bilgileri</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
     <link rel="stylesheet" href="../style.css">
@@ -15,7 +15,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
         <div class="container">
             <a class="navbar-brand" href="../index.html">
-                <i class="bi bi-currency-exchange me-2"></i>Finans Platformu
+                <i class="bi bi-currency-exchange me-2"></i>Canlı Döviz Kuru
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
@@ -48,12 +48,12 @@
             <div class="col-lg-8 mx-auto">
                 <div class="card">
                     <div class="card-header">
-                        <h1 class="h3 mb-0">Finans Platformu Hakkında</h1>
+                        <h1 class="h3 mb-0">Canlı Döviz Kuru Hakkında</h1>
                     </div>
                     <div class="card-body">
                         <h2 class="h4 mb-4">Canlı Döviz ve Kripto Para Bilgileri</h2>
                         <p class="lead">
-                            Finans Platformu, güncel döviz kurları ve kripto para fiyatlarını anlık olarak takip etmenizi sağlayan, kullanıcı dostu bir finans bilgi platformudur.
+                            Canlı Döviz Kuru, güncel döviz kurları ve kripto para fiyatlarını anlık olarak takip etmenizi sağlayan, kullanıcı dostu bir finans bilgi platformudur.
                         </p>
 
                         <h3 class="h5 mt-4">Sunduğumuz Hizmetler</h3>
@@ -119,7 +119,7 @@
                         <div class="alert alert-info mt-4">
                             <h4 class="h6 mb-3"><i class="bi bi-info-circle-fill me-2"></i>Güncel Finansal Bilgiler</h4>
                             <p class="mb-0">
-                                Finans Platformu olarak, dolar kaç TL, bitcoin kaç TL gibi güncel finansal bilgileri 
+                                Canlı Döviz Kuru olarak, dolar kaç TL, bitcoin kaç TL gibi güncel finansal bilgileri 
                                 anlık olarak sunuyor, döviz ve kripto para piyasalarındaki değişimleri takip ediyoruz. 
                                 Kullanıcılarımıza güvenilir ve kullanışlı finansal araçlar sunmak için sürekli kendimizi geliştiriyoruz.
                             </p>
@@ -135,12 +135,12 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
-                    <h5>Finans Platformu</h5>
+                    <h5>Canlı Döviz Kuru</h5>
                     <p>Güncel döviz ve kripto para bilgileri için güvenilir kaynağınız.</p>
                 </div>
                 <div class="col-md-6 text-md-end">
                     <h5>İletişim</h5>
-                    <p>Email: info@finansplatformu.com<br>Tel: +90 555 123 4567</p>
+                    <p>Email: info@candovizkuru.com<br>Tel: +90 555 123 4567</p>
                 </div>
             </div>
         </div>
