--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Finans Platformu - Canlı döviz kurları, kripto para çevirici, döviz çevirici ve güncel finans bilgileri">
-    <meta name="keywords" content="döviz kurları, kripto para, döviz çevirici, kripto çevirici, canlı kur, finans">
+    <meta name="description" content="Canlı Döviz Kuru - Anlık döviz kurları, dolar kaç tl, euro kaç tl, güncel döviz çevirici ve kripto para bilgileri.">
+    <meta name="keywords" content="canlı döviz kuru, anlık döviz kuru, dolar kaç tl, euro kaç tl, bitcoin kaç tl, kripto para piyasa">
     <meta name="author" content="Finans Platformu">
     <meta name="robots" content="index, follow">
     <meta property="og:title" content="Finans Platformu - Döviz ve Kripto Para Platformu">
     <meta property="og:description" content="Canlı döviz kurları, kripto para çevirici, döviz çevirici ve güncel finans bilgileri">
     <meta property="og:image" content="money.jpg">
     <meta property="og:url" content="https://harikafinans.com">
-    <title>Finans Platformu - Döviz ve Kripto Para Platformu</title>
+    <title>Canlı Döviz Kuru - Anlık Döviz ve Kripto Para Bilgileri</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
@@ -20,10 +20,10 @@
 </head>
 <body>
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-dark">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
         <div class="container">
             <a class="navbar-brand" href="index.html">
-                <i class="bi bi-currency-exchange"></i> Finans Platformu
+                <i class="bi bi-currency-exchange me-2"></i>Canlı Döviz Kuru
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
@@ -136,12 +136,12 @@
     </div>
 
     <!-- Footer -->
-    <footer class="mt-5">
+    <footer class="bg-dark text-light py-4 mt-5">
         <div class="container">
             <div class="row">
-                <div class="col-md-4">
-                    <h5>Finans Platformu</h5>
-                    <p>Güncel döviz kurları, kripto para çevirici ve finansal araçlar.</p>
+                <div class="col-md-6">
+                    <h5>Canlı Döviz Kuru</h5>
+                    <p>Güncel döviz ve kripto para bilgileri için güvenilir kaynağınız.</p>
                 </div>
                 <div class="col-md-4">
                     <h5>Hızlı Bağlantılar</h5>
@@ -152,7 +152,7 @@
                         <li><a href="pages/kripto-piyasa.html">Kripto Piyasa</a></li>
                     </ul>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-2">
                     <h5>İletişim</h5>
                     <ul class="list-unstyled">
                         <li><a href="pages/hakkimizda.html">Hakkımızda</a></li>
