--- a/pages/hakkimizda.html
+++ b/pages/hakkimizda.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Canlı Döviz Kuru - Anlık döviz kurları, dolar kaç tl, euro kaç tl, güncel döviz çevirici ve kripto para bilgileri.">
     <meta name="keywords" content="canlı döviz kuru, anlık döviz kuru, dolar kaç tl, euro kaç tl, bitcoin kaç tl, kripto para piyasa">
+    <meta name="google-adsense-account" content="ca-pub-8020765633962496">
     <title>Hakkımızda - Canlı Döviz Kuru | Anlık Döviz ve Kripto Para Bilgileri</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
