--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <meta property="og:image" content="money.jpg">
     <meta property="og:url" content="https://harikafinans.com">
     <meta name="google-adsense-account" content="ca-pub-8020765633962496">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8020765633962496"
+     crossorigin="anonymous"></script>
     <title>Canlı Döviz Kuru - Anlık Döviz ve Kripto Para Bilgileri</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
