--- a/pages/canli-doviz.html
+++ b/pages/canli-doviz.html
@@ -6,6 +6,8 @@
     <meta name="description" content="Canlı Döviz Kuru - Anlık döviz kurları, dolar kaç tl, euro kaç tl, güncel döviz çevirici ve kripto para bilgileri.">
     <meta name="keywords" content="canlı döviz kuru, anlık döviz kuru, dolar kaç tl, euro kaç tl, bitcoin kaç tl, kripto para piyasa">
     <meta name="google-adsense-account" content="ca-pub-8020765633962496">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8020765633962496"
+     crossorigin="anonymous"></script>
     <title>Canlı Döviz Kurları - Canlı Döviz Kuru | Anlık Döviz Bilgileri</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
