--- a/pages/kripto-cevirici.html
+++ b/pages/kripto-cevirici.html
@@ -12,13 +12,13 @@
     </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Anlık kripto para fiyatları ile Bitcoin, Ethereum ve 100'den fazla altcoin arasında çeviri yapın. Güncel BTC, ETH ve diğer kripto değerlerini kullanarak hesaplama yapın."> {/* Description güncellendi */}
-    <meta name="keywords" content="kripto çevirici, kripto para çevirici, bitcoin çevirici, ethereum çevirici, altcoin çevirici, anlık kripto fiyatları, canlı döviz kuru"> {/* Keywords güncellendi */}
+    <meta name="description" content="Anlık kripto para fiyatları ile Bitcoin, Ethereum ve 100'den fazla altcoin arasında çeviri yapın. Güncel BTC, ETH ve diğer kripto değerlerini kullanarak hesaplama yapın.">
+    <meta name="keywords" content="kripto çevirici, kripto para çevirici, bitcoin çevirici, ethereum çevirici, altcoin çevirici, anlık kripto fiyatları, canlı döviz kuru">
     <meta name="google-adsense-account" content="ca-pub-8020765633962496">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8020765633962496"
      crossorigin="anonymous"></script>
     <title>Kripto Para Çevirici - Canlı Döviz Kuru | Anlık Kripto Para Bilgileri</title>
-    <link rel="icon" type="image/png" href="../favicon.png"> {/* Favicon eklendi */}
+    <link rel="icon" type="image/png" href="../favicon.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
     <link rel="stylesheet" href="../style.css">
@@ -34,7 +34,7 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
-                 <ul class="navbar-nav ms-auto"> {/* ms-auto eklendi */}
+                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
                         <a class="nav-link" href="../index.html"><i class="bi bi-house-door"></i> Ana Sayfa</a>
                     </li>
@@ -42,7 +42,7 @@
                         <a class="nav-link" href="doviz-cevirici.html"><i class="bi bi-calculator"></i> Döviz Çevirici</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="kripto-cevirici.html"><i class="bi bi-currency-bitcoin"></i> Kripto Çevirici</a> {/* Active sınıfı düzeltildi, ikon eklendi */}
+                        <a class="nav-link active" href="kripto-cevirici.html"><i class="bi bi-currency-bitcoin"></i> Kripto Çevirici</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="canli-doviz.html"><i class="bi bi-graph-up"></i> Canlı Döviz</a>
@@ -51,7 +51,7 @@
                         <a class="nav-link" href="kripto-piyasa.html"><i class="bi bi-coin"></i> Kripto Piyasa</a>
                     </li>
                      <li class="nav-item">
-                        <a class="nav-link" href="blog.html"><i class="bi bi-pencil-square"></i> Blog</a> {/* Blog eklendi */}
+                        <a class="nav-link" href="blog.html"><i class="bi bi-pencil-square"></i> Blog</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="hakkimizda.html"><i class="bi bi-info-circle"></i> Hakkımızda</a>
@@ -66,20 +66,20 @@
         <div class="row justify-content-center">
             <div class="col-lg-8">
                 <!-- Kripto Çevirici Kartı -->
-                <div class="card shadow-sm"> {/* Gölge eklendi */}
-                    <div class="card-header bg-warning text-dark"> {/* Renk değiştirildi */}
-                        <h1 class="h4 mb-0"><i class="bi bi-currency-bitcoin"></i> Kripto Para Çevirici</h1> {/* Başlık seviyesi değiştirildi */}
+                <div class="card shadow-sm">
+                    <div class="card-header bg-warning text-dark">
+                        <h1 class="h4 mb-0"><i class="bi bi-currency-bitcoin"></i> Kripto Para Çevirici</h1>
                     </div>
                     <div class="card-body">
-                         <p class="card-text mb-4">Anlık fiyatları kullanarak kripto paralar arasında veya kripto paralar ile fiat paralar arasında çeviri yapın.</p> {/* Açıklama eklendi */}
-                        <div class="row g-3 align-items-center"> {/* Hizalama eklendi */}
-                            <div class="col-md-5"> {/* Genişlik ayarlandı */}
+                         <p class="card-text mb-4">Anlık fiyatları kullanarak kripto paralar arasında veya kripto paralar ile fiat paralar arasında çeviri yapın.</p>
+                        <div class="row g-3 align-items-center">
+                            <div class="col-md-5">
                                 <div class="form-floating">
-                                    <input type="number" class="form-control" id="amount" value="1" min="0" step="any"> {/* ID amount olarak değiştirildi, step="any" */}
+                                    <input type="number" class="form-control" id="amount" value="1" min="0" step="any">
                                     <label for="amount">Miktar</label>
                                 </div>
                             </div>
-                            <div class="col-md-5"> {/* Genişlik ayarlandı */}
+                            <div class="col-md-5">
                                 <div class="form-floating">
                                     <select class="form-select" id="fromCrypto">
                                         <!-- JavaScript ile doldurulacak -->
@@ -88,38 +88,37 @@
                                     <label for="fromCrypto">Kaynak Kripto Para</label>
                                 </div>
                             </div>
-                             <div class="col-md-2 text-center d-none d-md-block"> {/* Sadece masaüstünde görünen ikon */}
+                             <div class="col-md-2 text-center d-none d-md-block">
                                 <i class="bi bi-arrow-left-right fs-3 text-secondary"></i>
                             </div>
-                             <div class="col-12 d-md-none text-center"> {/* Sadece mobilde görünen ikon */}
+                             <div class="col-12 d-md-none text-center">
                                 <i class="bi bi-arrow-down-up fs-3 text-secondary my-2"></i>
                             </div>
-                            <div class="col-md-5"> {/* Genişlik ayarlandı */}
+                            <div class="col-md-5">
                                 <div class="form-floating">
-                                    <select class="form-select" id="toCurrency"> {/* ID toCurrency olarak değiştirildi */}
+                                    <select class="form-select" id="toCurrency">
                                         <!-- JavaScript ile doldurulacak -->
                                         <option>Yükleniyor...</option>
                                     </select>
-                                    <label for="toCurrency">Hedef Para Birimi</label> {/* Label güncellendi */}
+                                    <label for="toCurrency">Hedef Para Birimi</label>
                                 </div>
                             </div>
-                             <div class="col-md-5"> {/* Boşluk */}
+                             <div class="col-md-5">
                              </div>
-                             <div class="col-md-2 d-none d-md-block"> {/* Boşluk */}
+                             <div class="col-md-2 d-none d-md-block">
                              </div>
                         </div>
 
                         <div class="result-box mt-4 text-center">
-                            <div class="alert alert-warning" role="alert"> {/* Renk değiştirildi */}
+                            <div class="alert alert-warning" role="alert">
                                 <h5 class="alert-heading mb-0">Dönüşüm Sonucu</h5>
-                                <div id="result" class="display-6 mt-2 fw-bold">--</div> {/* ID result olarak değiştirildi, stil eklendi */}
+                                <div id="result" class="display-6 mt-2 fw-bold">--</div>
                             </div>
                         </div>
-                         <p class="text-center text-muted mt-2"><small id="cryptoLastUpdate">Kurlar yükleniyor...</small></p> {/* Son güncelleme yeri */}
+                         <p class="text-center text-muted mt-2"><small id="cryptoLastUpdate">Kurlar yükleniyor...</small></p>
 
 
-                        {/* Popüler Kripto Paralar Tablosu (Opsiyonel) */}
-                        <div class="mt-5 d-none"> {/* Başlangıçta gizli */}
+                        <div class="mt-5 d-none">
                              <h5 class="mb-3"><i class="bi bi-graph-up text-primary"></i> Popüler Kripto Paralar (USD Bazlı)</h5>
                             <div class="table-responsive">
                                 <table class="table table-sm table-hover">
@@ -153,21 +152,21 @@
                     <h5>Canlı Döviz Kuru</h5>
                     <p>Güncel döviz ve kripto para bilgileri için güvenilir kaynağınız.</p>
                 </div>
-                 <div class="col-md-3"> {/* Genişlik ayarlandı */}
+                 <div class="col-md-3">
                     <h5>Hızlı Bağlantılar</h5>
                     <ul class="list-unstyled">
                         <li><a href="doviz-cevirici.html">Döviz Çevirici</a></li>
                         <li><a href="kripto-cevirici.html">Kripto Çevirici</a></li>
                         <li><a href="canli-doviz.html">Canlı Döviz</a></li>
                         <li><a href="kripto-piyasa.html">Kripto Piyasa</a></li>
-                        <li><a href="blog.html">Blog</a></li> {/* Blog eklendi */}
+                        <li><a href="blog.html">Blog</a></li>
                     </ul>
                 </div>
-                <div class="col-md-3"> {/* Genişlik ayarlandı */}
+                <div class="col-md-3">
                     <h5>Diğer</h5>
                     <ul class="list-unstyled">
                         <li><a href="hakkimizda.html">Hakkımızda</a></li>
-                        <li><a href="gizlilik-politikasi.html">Gizlilik Politikası</a></li> {/* Gizlilik Politikası eklendi */}
+                        <li><a href="gizlilik-politikasi.html">Gizlilik Politikası</a></li>
                     </ul>
                 </div>
             </div>
